8157038: Move module option handling from java launcher to VM Summary: Fix JVM_GetVmArguments() handling of white-spaced options Reviewed-by: lfoltan